<resources>
    <string name="app_name">BrainPwr</string>
    <string name="welcome">Bienvenue sur BrainPwr</string>
    <string name="name">User name</string>
    <string name="game">JOUER</string>
    <string name="quizz">QUIZZ</string>
    <string name="sleep">SOMMEIL</string>
    <string name="cart_title">Rendez-vous</string>
    <string name="appointment">Calendrier</string>
    <string name="profile_title">Profil</string>
    <string name="profile">Votre Profil</string>
    <string name="information">Informations</string>
    <string name="profile_first_name">Nom</string>
    <string name="prof_first_name_rep">Monster</string>
    <string name="profile_last_name">Prénom</string>
    <string name="prof_last_name_rep">Pierrique</string>
    <string name="profile_adresss">Adresse</string>
    <string name="prof_adress_rep">666 rue du diable</string>
    <string name="profile_mail">e-mail</string>
    <string name="prof_mail_rep">brainPwr@gmail.com</string>
    <string name="medical_problems">Problèmes médicaux</string>
    <string name="disease">Parkinson</string>
    <string name="modification">modifier</string>
    <string name="profile_subscription">Abonnement</string>
    <string name="prof_subscription_rep">"Pas d'abonnement "</string>
    <string name="credit_card">Carte de paiment</string>
    <string name="cards">Moyen de paiment</string>
    <string name="calandar">Calendrier</string>
    <string name="log_in">Connexion</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="ble_scan_play">Pause le scan BLE</string>
    <string name="ble_scan_pause">Lancer le scan BLE</string>
    <string name="ble_scan_device_error">BLE non disponible sur cet appareil</string>
    <string name="ble_device_disconnected">Statut déconnecté</string>
    <string name="ble_device_connected">Statut connecté</string>

    <!-- Test add link doctolib -->
    <string name="text_link_ehs"> <a href="https://www.doctolib.fr">https://www.doctolib.fr</a></string>
    <string name="text_go_to"><a href="https://tutorial.eyehunts.com//">Go to EyeHunts</a></string>
</resources>