<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_home"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:paddingLeft="25dp"
        android:paddingRight="25dp">

        <TextView
            android:id="@+id/tvGreeting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/userName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvGreeting"
            android:letterSpacing="0.04"
            android:text="@string/name"
            android:textColor="@color/white"
            android:textSize="28sp" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="380dp"
        android:layout_height="140dp"
        android:orientation="vertical"
        android:background="@drawable/card_bg"
        android:layout_gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Médecin"
            android:textColor="@color/white"
            android:textSize="40sp"
            android:textStyle="bold"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="15dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="-3dp"
            android:text="Dr.Avery"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp">


                    <androidx.cardview.widget.CardView
                        android:layout_width="120dp"
                        android:layout_height="150dp"
                        app:cardElevation="10dp"
                        app:cardCornerRadius="10dp"
                        app:cardBackgroundColor="@color/blueColor"
                        android:layout_marginBottom="20dp"
                        android:layout_marginTop="20dp"
                        android:id="@+id/game_id"
                        >

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:layout_gravity="center">

                            <ImageView
                                android:layout_width="90dp"
                                android:layout_height="90dp"
                                android:src="@drawable/game"
                                android:layout_gravity="center"/>
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/game"
                                android:textColor="@color/white"
                                android:textAlignment="center"
                                android:textSize="22sp"
                                android:textStyle="bold"
                                />
                        </LinearLayout>


                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="120dp"
                        android:layout_height="150dp"
                        app:cardElevation="10dp"
                        app:cardCornerRadius="10dp"
                        app:cardBackgroundColor="@color/blueColor"
                        android:layout_marginBottom="20dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginStart="10dp"
                        android:id="@+id/quizz_id"
                        >

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:layout_gravity="center">

                            <ImageView
                                android:layout_width="90dp"
                                android:layout_height="90dp"
                                android:src="@drawable/quizz"
                                android:layout_gravity="center"/>
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/quizz"
                                android:textColor="@color/white"
                                android:textAlignment="center"
                                android:textSize="22sp"
                                android:textStyle="bold" />
                        </LinearLayout>


                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="120dp"
                        android:layout_height="150dp"
                        app:cardElevation="10dp"
                        app:cardCornerRadius="10dp"
                        app:cardBackgroundColor="@color/blueColor"
                        android:layout_marginBottom="20dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginStart="10dp"
                        android:id="@+id/sleep_id"
                        >

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:layout_gravity="center">

                            <ImageView
                                android:layout_width="90dp"
                                android:layout_height="90dp"
                                android:src="@drawable/sleep"
                                android:layout_gravity="center"/>
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/sleep"
                                android:textColor="@color/white"
                                android:textAlignment="center"
                                android:textSize="22sp"
                                android:textStyle="bold" />
                        </LinearLayout>


                    </androidx.cardview.widget.CardView>


                </LinearLayout>
            </HorizontalScrollView>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingStart="15dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cart_title"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:letterSpacing="0.04"
                    android:layout_marginBottom="5sp"/>

            </LinearLayout>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="130dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10sp"
                android:layout_marginBottom="10dp"
                app:cardElevation="10dp"
                app:cardCornerRadius="20dp"
                app:cardBackgroundColor="@color/turquoise"
                android:id="@+id/schedule_card">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="120dp"
                        android:layout_height="match_parent"
                        android:src="@drawable/appoint_bg"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/appointment"
                        android:textSize="40sp"
                        android:layout_gravity="center"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:layout_marginStart="20dp" />

                </LinearLayout>




            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingStart="15dp">


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/profile_title"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:letterSpacing="0.04"
                    android:layout_marginBottom="5sp"/>

            </LinearLayout>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="110dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10sp"
                android:layout_marginBottom="10dp"
                app:cardElevation="10dp"
                app:cardCornerRadius="20dp"
                app:cardBackgroundColor="@color/lightBlue"
                android:id="@+id/profile_id">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/profile"
                        android:textSize="40sp"
                        android:layout_gravity="center"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:layout_marginStart="40sp"
                        />

                    <ImageView
                        android:layout_width="120dp"
                        android:layout_height="match_parent"
                        android:src="@drawable/profile_bg"
                        android:layout_marginStart="15dp"/>


                </LinearLayout>




            </androidx.cardview.widget.CardView>

        </LinearLayout>


    </ScrollView>



</LinearLayout>